--- a/main.html
+++ b/main.html
@@ -8,6 +8,81 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>HTML Assignment #3</h1>
+
+		<table id="table-1" class="middle" >
+		<tr>
+			<td id="t11">left</td>
+			<td id="t12">center</td>
+			<td id="t13" class="right">right</td>
+		</tr>
+		<tr class="center">
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
+		</tr>
+		<tr>
+			<td>left</td>
+			<td>center</td>
+			<td class="right">right</td>
+		</tr>
+	</table>
+	<!-- table 2 -->
+	<table id ="table-2" class ="middle">
+		<tr >
+			<td id="t21" colspan="6"></td>
+		</tr>
+		<!-- 2  -->
+		<tr>
+			<td rowspan="4"></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+		<!-- 3 -->
+		<tr>
+			<td></td>
+			<td colspan="3"></td>
+			<td></td>
+		</tr>
+		<!-- 4 -->
+		<tr>
+			<td></td>
+			<td colspan="3"></td>
+			<td></td>
+		</tr>
+		<!-- 5 -->
+		<tr>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<!-- 6 -->
+		<tr >
+			<td colspan="6"></td>
+		</tr>		
+	</table>
+	
+	<table id="table-3" class="middle">
+		<tr >
+			<td class="green"></td>
+		</tr>
+		<tr>
+			<td id= "t-image">
+			<img  src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2013_FallP3/Luthra%20Portfolio/images-1.jpeg" alt ="image not loaded ">
+			</td>
+		</tr>
+		<tr >
+			<td class="blue"></td>
+		</tr>
+	</table>
+	
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
